--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--suppress ALL -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_maps"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     >
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,10 +14,10 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:transitionName="map_transition"
         tools:context=".MapsActivity"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp"
+        android:transitionName="map_transition"/>
 
     <RelativeLayout
         android:id="@+id/relLayout1"
@@ -99,7 +98,6 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="13dp"
             android:entries="@array/items_Age"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/DiseaseSpinner"
             app:layout_constraintEnd_toEndOf="@+id/map"
             app:layout_constraintHorizontal_bias="0.041"
@@ -108,40 +106,4 @@
             app:layout_constraintVertical_bias="0.924" />
     </RelativeLayout>
 
-
-    <LinearLayout
-    android:id="@+id/relLayout1"
-    android:layout_width="416dp"
-    android:layout_height="51dp"
-    android:background="@drawable/white_border"
-    android:elevation="10dp"
-    tools:layout_editor_absoluteY="5dp">
-
-    <ImageView
-        android:id="@+id/ic_magnify"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/ic_magnify"
-        />
-
-    <EditText
-        android:id="@+id/input_search"
-        android:layout_width="355dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginEnd="11dp"
-        android:layout_toRightOf="@+id/ic_magnify"
-        android:background="@null"
-        android:hint="Enter Address, City or Zip Code"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:textColor="#000"
-        android:textSize="15sp" />
-
-    </LinearLayout>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
