--- a/app/src/main/res/layout/activity_report_disease_case.xml
+++ b/app/src/main/res/layout/activity_report_disease_case.xml
@@ -15,7 +15,7 @@
         android:hint="Name of Patient"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/etNameOfDisease2"
-        app:layout_constraintEnd_toEndOf="@+id/etNameOfDisease2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
